# weather-monorepo

./: .gitignore  README.md  cli.py  demo.py  noxfile.py  pyproject.toml
apps/: README.md
apps/cli-app/: pyproject.toml
apps/cli-app/src/cli_app/: _main.py
apps/cli-app/src/cli_app/modules/: __init__.py
apps/cli-app/src/cli_app/modules/celery/: __init__.py  _cli.py
apps/cli-app/src/cli_app/modules/database/: __init__.py  db_cli.py
apps/cli-app/src/cli_app/modules/demo/: __init__.py  _cli.py  demo_cli.py
apps/cli-app/src/cli_app/modules/weather/: __init__.py  _cli.py
config/: README.md  settings.toml
config/apis/: README.md
config/celery/: .secrets.example.toml  settings.toml
config/db/: settings.toml
containers/: .env.example  db-messaging.docker-compose.yml
scripts/: README.md  count_current_weather_rows.py  count_weather_forecast_rows.py  current_weather_background_task.py  db_init.py  save_db_tables_to_parquet.py  start_celery_beat.py  start_celery_worker.py  start_dev_containers.py
scripts/start_scripts/: start-dev-containers.ps1  start-dev-containers.sh
shared/: README.md
shared/core/: pyproject.toml
shared/core/src/core/: __init__.py
shared/core/src/core/db/: __methods.py
shared/core/src/core/depends/: db_depends.py
shared/core/src/core/setup/: __init__.py  __setup.py
shared/domain/: pyproject.toml
shared/domain/src/domain/location/: __init__.py  models.py  repository.py
shared/domain/src/domain/weather/current/: __init__.py  models.py  repository.py
shared/domain/src/domain/weather/forecast/: models.py  repository.py
